// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all ones 1`] = `
{
  "hash": "0x168758332d5b3e2d13be8048c8011b454590e06c44bce7f702f09103eef5a373",
  "size": 1,
  "testCase": "all_ones_size_1",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all ones 2`] = `
{
  "hash": "0x1aa095246abe4346ab432f47061ffaf938c40e7c8e4974b1388cd65a5ba78ad3",
  "size": 10,
  "testCase": "all_ones_size_10",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all ones 3`] = `
{
  "hash": "0x246f6d429bef5cf57490fa56f7ced9beb4f9c5bdd52788d21087707bbd24312f",
  "size": 100,
  "testCase": "all_ones_size_100",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all zeros 1`] = `
{
  "hash": "0x2710144414c3a5f2354f4c08d52ed655b9fe253b4bf12cb9ad3de693d9b1db11",
  "size": 1,
  "testCase": "all_zeros_size_1",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all zeros 2`] = `
{
  "hash": "0x0f319258a1a8e85324d818a86f6b9e843601bf5fc0c16a5f6373ad1079d61bf4",
  "size": 10,
  "testCase": "all_zeros_size_10",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: all zeros 3`] = `
{
  "hash": "0x09b5add3605a3a3178235692d7b115a65a75dd8125d0fc31fbcf259966edec41",
  "size": 100,
  "testCase": "all_zeros_size_100",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: maximum field elements 1`] = `
{
  "hash": "0x2a83b51f6c23d49f641e585d127b2367c05060f5da58c3bb891818ca5f725eec",
  "inputValue": "0x30644e72e131a029b85045b68181585d2833e84879b9709143e1f593f0000000",
  "size": 1,
  "testCase": "max_field_element_size_1",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: maximum field elements 2`] = `
{
  "hash": "0x19967832130eb18afbfd57fb55885512831a82da109969e84954c7dd0a5f0235",
  "inputValue": "0x30644e72e131a029b85045b68181585d2833e84879b9709143e1f593f0000000",
  "size": 5,
  "testCase": "max_field_element_size_5",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native handles edge case: maximum field elements 3`] = `
{
  "hash": "0x11b521edb95669c2e21397e2ccb4f3ae5c823134e8b57bf8b67e6f2e0dcc3abf",
  "inputValue": "0x30644e72e131a029b85045b68181585d2833e84879b9709143e1f593f0000000",
  "size": 10,
  "testCase": "max_field_element_size_10",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native produces identical results for known test vectors 1`] = `
{
  "hash": "0x2710144414c3a5f2354f4c08d52ed655b9fe253b4bf12cb9ad3de693d9b1db11",
  "inputs": [
    "0x0000000000000000000000000000000000000000000000000000000000000000",
  ],
  "testCase": "single_zero",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native produces identical results for known test vectors 2`] = `
{
  "hash": "0x168758332d5b3e2d13be8048c8011b454590e06c44bce7f702f09103eef5a373",
  "inputs": [
    "0x0000000000000000000000000000000000000000000000000000000000000001",
  ],
  "testCase": "single_one",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native produces identical results for known test vectors 3`] = `
{
  "hash": "0x0b63a53787021a4a962a452c2921b3663aff1ffd8d5510540f8e659e782956f1",
  "inputs": [
    "0x0000000000000000000000000000000000000000000000000000000000000000",
    "0x0000000000000000000000000000000000000000000000000000000000000000",
  ],
  "testCase": "two_zeros",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native produces identical results for known test vectors 4`] = `
{
  "hash": "0x099f9ef8a2ccf575306ef6b7996be65db5e47d860bfab6592e52c89764b4b9cc",
  "inputs": [
    "0x0000000000000000000000000000000000000000000000000000000000000000",
    "0x0000000000000000000000000000000000000000000000000000000000000001",
    "0x0000000000000000000000000000000000000000000000000000000000000002",
  ],
  "testCase": "sequential_0_1_2",
}
`;

exports[`poseidon2Hash benchmark (Async API): WASM vs Native produces identical results for known test vectors 5`] = `
{
  "hash": "0x2a83b51f6c23d49f641e585d127b2367c05060f5da58c3bb891818ca5f725eec",
  "inputs": [
    "0x30644e72e131a029b85045b68181585d2833e84879b9709143e1f593f0000000",
  ],
  "testCase": "max_field_element",
}
`;
